@@ -1,0 +1,1 @@
+INSERT INTO `rule_values` (`ruleset_id`, `rule_name`, `rule_value`, `notes`) VALUES (1, 'Skills:MaxTrainSpecializations', '50', 'Max level a GM trainer will train casting specializations');
